[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rcsb.utils.io"
description = "RCSB Python I/O Utility Classes"
readme = "README.md"
authors = [
    { name="John Westbrook", email="john.westbrook@rcsb.org" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy >= 1.24.4",
    "pytz",
    "python-dateutil",
    "ruamel.yaml",
    "multiprocess",
    "mmcif >= 0.72",
    "rcsb.utils.validation >= 0.20",
    "PyNaCl >= 1.3.0",
    "requests >= 2.25",
    "paramiko >=2.7.2",
    "psutil >= 5.7.2",
    "GitPython >= 3.1.18",
    "urllib3 >= 1.26.15",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["check-manifest"]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage"]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb_utils_io"

[tool.setuptools.packages.find]
include = ["rcsb*"]  # must leave at "rcsb*" and not "rcsb.*", else the 'rcsb/__init__.py' file is dropped
exclude = ["rcsb.utils.test*", "rcsb.mock-*", "test*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "rcsb.utils.io.__version__"}

# Add this to prevent uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
[tool.uv]
managed = false
