[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcsb.utils.io"
description = "RCSB Python I/O Utility Classes"
version = "1.53"
readme = "README.md"
authors = [
    { name="John Westbrook", email="john.westbrook@rcsb.org" }
]
maintainers = [
    { name="Dennis Piehl", email="dennis.piehl@rcsb.org" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy >= 1.24.4",
    "pytz",
    "python-dateutil",
    "ruamel.yaml",
    "multiprocess",
    "mmcif >= 1.0.0",
    "PyNaCl >= 1.3.0",
    "requests >= 2.25",
    "paramiko >=2.7.2",
    "psutil >= 5.7.2",
    "GitPython >= 3.1.18",
    "urllib3 >= 1.26.15",
]

[project.optional-dependencies]
tests = ["tox", "pylint", "black>=21.5b1", "flake8", "coverage"]

[project.urls]
Homepage = "https://github.com/rcsb/py-rcsb_utils_io"


# ----------------  hatch configuration ----------------
[tool.hatch.build.targets.sdist]
include = [
    "/rcsb/**",
    "/README.md",
    "/LICENSE",
    "/HISTORY.txt",
    "/pyproject.toml",
]
exclude = [
    "/rcsb/utils/test*/test*-*",
    "/rcsb/mock-*",
]

[tool.hatch.build.targets.wheel]
packages = ["rcsb"]
exclude = [
    "/rcsb/utils/test*",
    "/rcsb/mock-*",
]

[tool.hatch.envs.default]
skip-install = true


# ----------------  test configuration ----------------
[tool.hatch.envs.hatch-test]
dependencies = ["tox"]

[tool.hatch.envs.hatch-test.scripts]
run = ["tox"]

# ----------------  UV configuration ----------------
# Add this to prevent uv from automatically creating venvs within individual packages when running 'uv run ...' from within the package directory
[tool.uv]
managed = false
